--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Calculadora PWA",
   "short_name": "Calc PWA",
   "description": "Una calculadora PWA con notificaciones",
-  "start_url": "/calculadora/index.html",
+  "start_url": "/calculadora/",
+  "scope": "/calculadora/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4285f4",
