--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Calculadora PWA",
   "short_name": "Calc PWA",
   "description": "Una calculadora PWA con notificaciones",
-  "start_url": "/calculadora/",
+  "start_url": "/calculadora/index.html",
   "scope": "/calculadora/",
   "display": "standalone",
   "background_color": "#ffffff",
